--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -69,11 +69,11 @@
     {
       --cor-branco: #ffffff;
       --cor-preto: #000000;
+      --cor-gelo: #C3C3C3;
+      --cor-cinza: #D2D2D2;
+      --cor-verde-principal: #55736C;
+      --cor-verde-escuro: #406D63;
 
-      --cor-gelo: #ECF0F8;
-      --cor-azul: #34B7D1;
-      --cor-azul-claro: #EAF8FA;
-      --cor-cinza: #BBC0D3;
 
       --f0: clamp(0.5rem, 1vw, 0.7rem);
       --f1: clamp(0.7rem, 1vw, 0.9rem);
@@ -86,8 +86,9 @@
       --f8: clamp(3rem, 1vw, 4rem);
 
       --bold: 'Figtree-Bold';
-      --regular: 'Figtree-Regular';
-      --candy: 'Salty-Candy';
+      --light: 'Figtree-Light';
+      --semi-bold: 'Figtree-SemiBold'
+      --great: 'GreatVibes';
     }
   </style>
 
